# checkrate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  vcpkg.json
.github/: changelog.md
.github/workflows/: build.yml
ports/sdl3/: portfile.cmake  triton-imu.patch
res/: checkrate.desktop  version.rc.in
