cmake_minimum_required(VERSION 3.16)
project("checkrate" VERSION 1.0.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
add_executable(${PROJECT_NAME} main.c)
configure_file(config.h.in config.h @ONLY)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
if(WIN32)
    set(PROJECT_COMPANY "ceski")
    set(PROJECT_COPYRIGHT "Copyright (C) 2026")
    set(PROJECT_FILE_VERSION "${PROJECT_VERSION_MAJOR},${PROJECT_VERSION_MINOR},${PROJECT_VERSION_PATCH},0")
    configure_file(version.rc.in version.rc)
    target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/version.rc")
endif()
find_package(SDL3 3.4.4 REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)

if(WIN32)
    set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
    set(CPACK_PACKAGE_VENDOR ${PROJECT_COMPANY})
    set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
    set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
    set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
    set(CPACK_RESOURCE_FILE_LICENSE ${PROJECT_SOURCE_DIR}/LICENSE)
    set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
    set(CPACK_GENERATOR ZIP)
    if(CMAKE_VERSION VERSION_GREATER_EQUAL 4.3)
        set(CPACK_COMPRESSION_LEVEL 9)
    endif()
    install(FILES LICENSE DESTINATION . RENAME LICENSE.txt)
    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION .)
    include(CPack)
endif()
